--- a/.editorconfig
+++ b/.editorconfig
@@ -142,6 +142,11 @@ dotnet_diagnostic.sa1101.severity=none
 dotnet_diagnostic.SA1408.severity=none
 dotnet_diagnostic.SA1407.severity=none
 dotnet_diagnostic.SA1118.severity=none
+dotnet_diagnostic.CA1002.severity=none
+dotnet_diagnostic.CA1031.severity=none
+dotnet_diagnostic.CA1062.severity=none
+dotnet_diagnostic.CA2234.severity=none
+dotnet_diagnostic.CA2007.severity=none
 # ReSharper properties
 resharper_wrap_after_declaration_lpar=true
 
